[SMEP-1625] fix combobox overlapping sticky header on bank transactions page (#2932)
* lower combobox z-index to be less than the stick-header

* fix typo

--- a/src/modules/banking/components/BankingView.module.css
+++ b/src/modules/banking/components/BankingView.module.css
@@ -98,6 +98,12 @@
   box-shadow: none;
 }
 
+/* prevent combobox covering sticky header */
+/* https://arlive.atlassian.net/browse/SMEP-1625 */
+.bankTransactionView :global(.flx-template__body .combobox-menu) {
+  z-index: 99; /* less than .sticky-header--on */
+}
+
 @media (min-width: 768px) {
   .paymentAllocationFilterOptions {
     display: grid;
